# agent-dev-toolkit

./: .gitignore  README.md  THIRD-PARTY-LICENSES  pyproject.toml
agentcli/: ui_builder.py
agentcli/cli/: __init__.py
agentcli/core/: __init__.py  agent_server.py.j2  container_server.py  response_utils.py  template_generator.py  trace_utils.py
agentcli/environment/: __init__.py
agentcli/generators/: __init__.py
agentcli/server/: __init__.py  dev_server.py  ui_assets.py
agentcli/templates/: Dockerfile.j2  __init__.py  agent.py.j2  agent_config.yaml.j2  env_example.j2  mcp_client.py.j2  mcp_tools.py.j2  multiplicator.py.j2  requirements.txt.j2  sample_tool.py.j2  tools_init.py.j2
agentcli/templates/ui/: next.config.js.j2  package.json.j2  postcss.config.js.j2  tailwind.config.js.j2  tsconfig.json.j2
agentcli/templates/ui/app/: globals.css.j2  layout.tsx.j2  page.tsx.j2
agentcli/ui/: .gitignore  .npmrc  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  temp-ui-licenses.json  tsconfig.json
agentcli/ui/src/app/: globals.css  layout.tsx  page.tsx
agentcli/ui/src/components/: ConfigViewer.tsx  MetricsPanel.tsx  SequenceDiagramModal.tsx  SettingsPanel.tsx  Timeline.tsx  TimelineModal.tsx
agentcli/ui/src/components/ui/: button.tsx  scroll-area.tsx  separator.tsx  slider.tsx  tabs.tsx
agentcli/ui/src/lib/: utils.ts
agentcli/ui/src/types/: dompurify.d.ts  observability.ts
